--- a/gradle.properties
+++ b/gradle.properties
@@ -15,3 +15,7 @@ org.gradle.jvmargs=-Xmx1G
 # Dependencies
 	# currently not on the main fabric site, check on the maven: https://maven.fabricmc.net/net/fabricmc/fabric-api/fabric-api
 	fabric_version=0.22.0+build.408-1.16
+
+# Other Libraries
+	geckolib_version = 3.0.27:dev
+	geckolib_minecraft_version = fabric-1.16.5
